Add support for custom server jars